LDI Lalagkos Lysandros/Syntax analysis/Syntax.output
Nonterminals useless in grammar

   dims
   dim
   initializer
   init_value
   init_values
   variabledefs
   variabledef
   short_par_func_header
   parameter_types
   pass_list_dims
   global_var_declaration
   init_variabledefs
   init_variabledef
   declarations


Terminals unused in grammar

   "Double"
   "Do"
   "Print"
   ":"


Rules useless in grammar

   77 global_declaration: global_var_declaration

   78 dims: dims dim

   79 dim: "[" "integer constant" "]"
   80    | "[" "]"

   81 initializer: "=" init_value
   82            | %empty

   83 init_value: expression
   84           | "{" init_values "}"

   85 init_values: init_values "," init_value
   86            | init_value

   87 variabledefs: variabledefs "," variabledef
   88             | variabledef

   89 variabledef: "Identifier" dims

   90 short_func_declaration: short_par_func_header ";"

   91 short_par_func_header: func_header_start "(" parameter_types ")"

   92 parameter_types: parameter_types "," typename pass_list_dims
   93                | typename pass_list_dims

   94 pass_list_dims: dims

   95 global_var_declaration: typename init_variabledefs ";"

   96 init_variabledefs: init_variabledefs "," init_variabledef
   97                  | init_variabledef

   98 init_variabledef: variabledef initializer

   99 pass_variabledef: variabledef

  100 decl_statements: declarations statements
  101                | declarations

  102 declarations: declarations typename variabledefs ";"
  103             | typename variabledefs ";"


Grammar

    0 $accept: Program "End Of File"

    1 Program: Class

    2 Class: "Class" "Identifier" "{" global_declarations main_function "}"

    3 global_declarations: global_declarations global_declaration
    4                    | %empty

    5 global_declaration: func_declaration

    6 typename: standard_type
    7         | "Identifier"

    8 standard_type: "Char"
    9              | "Integer"
   10              | "Float"
   11              | "Void"
   12              | "Bool"

   13 expression: expression "LogicalOr" expression
   14           | expression "LogicalAnd" expression
   15           | expression "EqualOp" expression
   16           | expression "RelOp" expression
   17           | expression "AddSubOp" expression
   18           | expression "MultiplOp" expression
   19           | "NotOp" expression
   20           | "AddSubOp" expression
   21           | "IncrDecr" expression
   22           | variable "IncrDecr"
   23           | variable
   24           | variable "(" expression_list ")"
   25           | constant
   26           | "(" general_expression ")"
   27           | "(" standard_type ")"
   28           | listexpression

   29 variable: variable "[" general_expression "]"
   30         | typename "Identifier"
   31         | "Identifier"

   32 general_expression: general_expression "," general_expression
   33                   | assignment

   34 assignment: variable "=" assignment
   35           | expression

   36 expression_list: general_expression
   37                | %empty

   38 constant: "character constant"
   39         | "integer constant"
   40         | "float constant"
   41         | "String constant"
   42         | "False"
   43         | "True"

   44 listexpression: "[" expression_list "]"

   45 short_func_declaration: nopar_func_header ";"

   46 func_header_start: typename "Identifier"

   47 nopar_func_header: func_header_start "(" ")"

   48 func_declaration: short_func_declaration
   49                 | full_func_declaration

   50 full_func_declaration: full_par_func_header "{" decl_statements "}"
   51                      | nopar_func_header "{" decl_statements "}"

   52 full_par_func_header: func_header_start "(" parameter_list ")"

   53 parameter_list: parameter_list "," typename pass_variabledef
   54               | typename pass_variabledef

   55 pass_variabledef: "Identifier"

   56 decl_statements: statements
   57                | %empty

   58 statements: statements statement
   59           | statement

   60 statement: expression_statement
   61          | if_statement
   62          | while_statement
   63          | return_statement
   64          | comp_statement
   65          | ";"

   66 expression_statement: general_expression ";"

   67 if_statement: "If" "(" general_expression ")" statement if_tail

   68 if_tail: "Else" statement
   69        | %empty

   70 while_statement: "While" "(" general_expression ")" statement

   71 optexpr: general_expression
   72        | %empty

   73 return_statement: "Return" optexpr ";"

   74 comp_statement: "{" decl_statements "}"

   75 main_function: main_header "{" decl_statements "}"

   76 main_header: "Integer" "Main" "(" ")"


Terminals, with rules where they appear

"End Of File" (0) 0
error (256)
"integer constant" (258) 39
"float constant" (259) 40
"character constant" (260) 38
"True" (261) 43
"False" (262) 42
"String constant" (263) 41
"Identifier" (264) 2 7 30 31 46 55
"Class" (265) 2
"Char" (266) 8
"Integer" (267) 9 76
"Float" (268) 10
"Double" (269)
"Void" (270) 11
"If" (271) 67
"Else" (272) 68
"While" (273) 70
"Do" (274)
"Bool" (275) 12
"Return" (276) 73
"Main" (277) 76
"Print" (278)
"RelOp" (279) 16
"EqualOp" (280) 15
"LogicalOr" (281) 13
"LogicalAnd" (282) 14
"=" (283) 34
"AddSubOp" (284) 17 20
"MultiplOp" (285) 18
"NotOp" (286) 19
"IncrDecr" (287) 21 22
"{" (288) 2 50 51 74 75
"}" (289) 2 50 51 74 75
"[" (290) 29 44
"]" (291) 29 44
"(" (292) 24 26 27 47 52 67 70 76
")" (293) 24 26 27 47 52 67 70 76
";" (294) 45 65 66 73
"," (295) 32 53
":" (296)
LOWER_THAN_ELSE (297)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
Program (44)
    on left: 1, on right: 0
Class (45)
    on left: 2, on right: 1
global_declarations (46)
    on left: 3 4, on right: 2 3
global_declaration (47)
    on left: 5, on right: 3
typename (48)
    on left: 6 7, on right: 30 46 53 54
standard_type (49)
    on left: 8 9 10 11 12, on right: 6 27
expression (50)
    on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28, on right:
    13 14 15 16 17 18 19 20 21 35
variable (51)
    on left: 29 30 31, on right: 22 23 24 29 34
general_expression (52)
    on left: 32 33, on right: 26 29 32 36 66 67 70 71
assignment (53)
    on left: 34 35, on right: 33 34
expression_list (54)
    on left: 36 37, on right: 24 44
constant (55)
    on left: 38 39 40 41 42 43, on right: 25
listexpression (56)
    on left: 44, on right: 28
short_func_declaration (57)
    on left: 45, on right: 48
func_header_start (58)
    on left: 46, on right: 47 52
nopar_func_header (59)
    on left: 47, on right: 45 51
func_declaration (60)
    on left: 48 49, on right: 5
full_func_declaration (61)
    on left: 50 51, on right: 49
full_par_func_header (62)
    on left: 52, on right: 50
parameter_list (63)
    on left: 53 54, on right: 52 53
pass_variabledef (64)
    on left: 55, on right: 53 54
decl_statements (65)
    on left: 56 57, on right: 50 51 74 75
statements (66)
    on left: 58 59, on right: 56 58
statement (67)
    on left: 60 61 62 63 64 65, on right: 58 59 67 68 70
expression_statement (68)
    on left: 66, on right: 60
if_statement (69)
    on left: 67, on right: 61
if_tail (70)
    on left: 68 69, on right: 67
while_statement (71)
    on left: 70, on right: 62
optexpr (72)
    on left: 71 72, on right: 73
return_statement (73)
    on left: 73, on right: 63
comp_statement (74)
    on left: 74, on right: 64
main_function (75)
    on left: 75, on right: 2
main_header (76)
    on left: 76, on right: 75


State 0

    0 $accept: . Program "End Of File"

    "Class"  shift, and go to state 1

    Program  go to state 2
    Class    go to state 3


State 1

    2 Class: "Class" . "Identifier" "{" global_declarations main_function "}"

    "Identifier"  shift, and go to state 4


State 2

    0 $accept: Program . "End Of File"

    "End Of File"  shift, and go to state 5


State 3

    1 Program: Class .

    $default  reduce using rule 1 (Program)


State 4

    2 Class: "Class" "Identifier" . "{" global_declarations main_function "}"

    "{"  shift, and go to state 6


State 5

    0 $accept: Program "End Of File" .

    $default  accept


State 6

    2 Class: "Class" "Identifier" "{" . global_declarations main_function "}"

    $default  reduce using rule 4 (global_declarations)

    global_declarations  go to state 7


State 7

    2 Class: "Class" "Identifier" "{" global_declarations . main_function "}"
    3 global_declarations: global_declarations . global_declaration

    "Identifier"  shift, and go to state 8
    "Char"        shift, and go to state 9
    "Integer"     shift, and go to state 10
    "Float"       shift, and go to state 11
    "Void"        shift, and go to state 12
    "Bool"        shift, and go to state 13

    global_declaration      go to state 14
    typename                go to state 15
    standard_type           go to state 16
    short_func_declaration  go to state 17
    func_header_start       go to state 18
    nopar_func_header       go to state 19
    func_declaration        go to state 20
    full_func_declaration   go to state 21
    full_par_func_header    go to state 22
    main_function           go to state 23
    main_header             go to state 24


State 8

    7 typename: "Identifier" .

    $default  reduce using rule 7 (typename)


State 9

    8 standard_type: "Char" .

    $default  reduce using rule 8 (standard_type)


State 10

    9 standard_type: "Integer" .
   76 main_header: "Integer" . "Main" "(" ")"

    "Main"  shift, and go to state 25

    $default  reduce using rule 9 (standard_type)


State 11

   10 standard_type: "Float" .

    $default  reduce using rule 10 (standard_type)


State 12

   11 standard_type: "Void" .

    $default  reduce using rule 11 (standard_type)


State 13

   12 standard_type: "Bool" .

    $default  reduce using rule 12 (standard_type)


State 14

    3 global_declarations: global_declarations global_declaration .

    $default  reduce using rule 3 (global_declarations)


State 15

   46 func_header_start: typename . "Identifier"

    "Identifier"  shift, and go to state 26


State 16

    6 typename: standard_type .

    $default  reduce using rule 6 (typename)


State 17

   48 func_declaration: short_func_declaration .

    $default  reduce using rule 48 (func_declaration)


State 18

   47 nopar_func_header: func_header_start . "(" ")"
   52 full_par_func_header: func_header_start . "(" parameter_list ")"

    "("  shift, and go to state 27


State 19

   45 short_func_declaration: nopar_func_header . ";"
   51 full_func_declaration: nopar_func_header . "{" decl_statements "}"

    "{"  shift, and go to state 28
    ";"  shift, and go to state 29


State 20

    5 global_declaration: func_declaration .

    $default  reduce using rule 5 (global_declaration)


State 21

   49 func_declaration: full_func_declaration .

    $default  reduce using rule 49 (func_declaration)


State 22

   50 full_func_declaration: full_par_func_header . "{" decl_statements "}"

    "{"  shift, and go to state 30


State 23

    2 Class: "Class" "Identifier" "{" global_declarations main_function . "}"

    "}"  shift, and go to state 31


State 24

   75 main_function: main_header . "{" decl_statements "}"

    "{"  shift, and go to state 32


State 25

   76 main_header: "Integer" "Main" . "(" ")"

    "("  shift, and go to state 33


State 26

   46 func_header_start: typename "Identifier" .

    $default  reduce using rule 46 (func_header_start)


State 27

   47 nopar_func_header: func_header_start "(" . ")"
   52 full_par_func_header: func_header_start "(" . parameter_list ")"

    "Identifier"  shift, and go to state 8
    "Char"        shift, and go to state 9
    "Integer"     shift, and go to state 34
    "Float"       shift, and go to state 11
    "Void"        shift, and go to state 12
    "Bool"        shift, and go to state 13
    ")"           shift, and go to state 35

    typename        go to state 36
    standard_type   go to state 16
    parameter_list  go to state 37


State 28

   51 full_func_declaration: nopar_func_header "{" . decl_statements "}"

    "integer constant"    shift, and go to state 38
    "float constant"      shift, and go to state 39
    "character constant"  shift, and go to state 40
    "True"                shift, and go to state 41
    "False"               shift, and go to state 42
    "String constant"     shift, and go to state 43
    "Identifier"          shift, and go to state 44
    "Char"                shift, and go to state 9
    "Integer"             shift, and go to state 34
    "Float"               shift, and go to state 11
    "Void"                shift, and go to state 12
    "If"                  shift, and go to state 45
    "While"               shift, and go to state 46
    "Bool"                shift, and go to state 13
    "Return"              shift, and go to state 47
    "AddSubOp"            shift, and go to state 48
    "NotOp"               shift, and go to state 49
    "IncrDecr"            shift, and go to state 50
    "{"                   shift, and go to state 51
    "["                   shift, and go to state 52
    "("                   shift, and go to state 53
    ";"                   shift, and go to state 54

    $default  reduce using rule 57 (decl_statements)

    typename              go to state 55
    standard_type         go to state 16
    expression            go to state 56
    variable              go to state 57
    general_expression    go to state 58
    assignment            go to state 59
    constant              go to state 60
    listexpression        go to state 61
    decl_statements       go to state 62
    statements            go to state 63
    statement             go to state 64
    expression_statement  go to state 65
    if_statement          go to state 66
    while_statement       go to state 67
    return_statement      go to state 68
    comp_statement        go to state 69


State 29

   45 short_func_declaration: nopar_func_header ";" .

    $default  reduce using rule 45 (short_func_declaration)


State 30

   50 full_func_declaration: full_par_func_header "{" . decl_statements "}"

    "integer constant"    shift, and go to state 38
    "float constant"      shift, and go to state 39
    "character constant"  shift, and go to state 40
    "True"                shift, and go to state 41
    "False"               shift, and go to state 42
    "String constant"     shift, and go to state 43
    "Identifier"          shift, and go to state 44
    "Char"                shift, and go to state 9
    "Integer"             shift, and go to state 34
    "Float"               shift, and go to state 11
    "Void"                shift, and go to state 12
    "If"                  shift, and go to state 45
    "While"               shift, and go to state 46
    "Bool"                shift, and go to state 13
    "Return"              shift, and go to state 47
    "AddSubOp"            shift, and go to state 48
    "NotOp"               shift, and go to state 49
    "IncrDecr"            shift, and go to state 50
    "{"                   shift, and go to state 51
    "["                   shift, and go to state 52
    "("                   shift, and go to state 53
    ";"                   shift, and go to state 54

    $default  reduce using rule 57 (decl_statements)

    typename              go to state 55
    standard_type         go to state 16
    expression            go to state 56
    variable              go to state 57
    general_expression    go to state 58
    assignment            go to state 59
    constant              go to state 60
    listexpression        go to state 61
    decl_statements       go to state 70
    statements            go to state 63
    statement             go to state 64
    expression_statement  go to state 65
    if_statement          go to state 66
    while_statement       go to state 67
    return_statement      go to state 68
    comp_statement        go to state 69


State 31

    2 Class: "Class" "Identifier" "{" global_declarations main_function "}" .

    $default  reduce using rule 2 (Class)


State 32

   75 main_function: main_header "{" . decl_statements "}"

    "integer constant"    shift, and go to state 38
    "float constant"      shift, and go to state 39
    "character constant"  shift, and go to state 40
    "True"                shift, and go to state 41
    "False"               shift, and go to state 42
    "String constant"     shift, and go to state 43
    "Identifier"          shift, and go to state 44
    "Char"                shift, and go to state 9
    "Integer"             shift, and go to state 34
    "Float"               shift, and go to state 11
    "Void"                shift, and go to state 12
    "If"                  shift, and go to state 45
    "While"               shift, and go to state 46
    "Bool"                shift, and go to state 13
    "Return"              shift, and go to state 47
    "AddSubOp"            shift, and go to state 48
    "NotOp"               shift, and go to state 49
    "IncrDecr"            shift, and go to state 50
    "{"                   shift, and go to state 51
    "["                   shift, and go to state 52
    "("                   shift, and go to state 53
    ";"                   shift, and go to state 54

    $default  reduce using rule 57 (decl_statements)

    typename              go to state 55
    standard_type         go to state 16
    expression            go to state 56
    variable              go to state 57
    general_expression    go to state 58
    assignment            go to state 59
    constant              go to state 60
    listexpression        go to state 61
    decl_statements       go to state 71
    statements            go to state 63
    statement             go to state 64
    expression_statement  go to state 65
    if_statement          go to state 66
    while_statement       go to state 67
    return_statement      go to state 68
    comp_statement        go to state 69


State 33

   76 main_header: "Integer" "Main" "(" . ")"

    ")"  shift, and go to state 72


State 34

    9 standard_type: "Integer" .

    $default  reduce using rule 9 (standard_type)


State 35

   47 nopar_func_header: func_header_start "(" ")" .

    $default  reduce using rule 47 (nopar_func_header)


State 36

   54 parameter_list: typename . pass_variabledef

    "Identifier"  shift, and go to state 73

    pass_variabledef  go to state 74


State 37

   52 full_par_func_header: func_header_start "(" parameter_list . ")"
   53 parameter_list: parameter_list . "," typename pass_variabledef

    ")"  shift, and go to state 75
    ","  shift, and go to state 76


State 38

   39 constant: "integer constant" .

    $default  reduce using rule 39 (constant)


State 39

   40 constant: "float constant" .

    $default  reduce using rule 40 (constant)


State 40

   38 constant: "character constant" .

    $default  reduce using rule 38 (constant)


State 41

   43 constant: "True" .

    $default  reduce using rule 43 (constant)


State 42

   42 constant: "False" .

    $default  reduce using rule 42 (constant)


State 43

   41 constant: "String constant" .

    $default  reduce using rule 41 (constant)


State 44

    7 typename: "Identifier" .
   31 variable: "Identifier" .

    "Identifier"  reduce using rule 7 (typename)
    $default      reduce using rule 31 (variable)


State 45

   67 if_statement: "If" . "(" general_expression ")" statement if_tail

    "("  shift, and go to state 77


State 46

   70 while_statement: "While" . "(" general_expression ")" statement

    "("  shift, and go to state 78


State 47

   73 return_statement: "Return" . optexpr ";"

    "integer constant"    shift, and go to state 38
    "float constant"      shift, and go to state 39
    "character constant"  shift, and go to state 40
    "True"                shift, and go to state 41
    "False"               shift, and go to state 42
    "String constant"     shift, and go to state 43
    "Identifier"          shift, and go to state 44
    "Char"                shift, and go to state 9
    "Integer"             shift, and go to state 34
    "Float"               shift, and go to state 11
    "Void"                shift, and go to state 12
    "Bool"                shift, and go to state 13
    "AddSubOp"            shift, and go to state 48
    "NotOp"               shift, and go to state 49
    "IncrDecr"            shift, and go to state 50
    "["                   shift, and go to state 52
    "("                   shift, and go to state 53

    $default  reduce using rule 72 (optexpr)

    typename            go to state 55
    standard_type       go to state 16
    expression          go to state 56
    variable            go to state 57
    general_expression  go to state 79
    assignment          go to state 59
    constant            go to state 60
    listexpression      go to state 61
    optexpr             go to state 80


State 48

   20 expression: "AddSubOp" . expression

    "integer constant"    shift, and go to state 38
    "float constant"      shift, and go to state 39
    "character constant"  shift, and go to state 40
    "True"                shift, and go to state 41
    "False"               shift, and go to state 42
    "String constant"     shift, and go to state 43
    "Identifier"          shift, and go to state 44
    "Char"                shift, and go to state 9
    "Integer"             shift, and go to state 34
    "Float"               shift, and go to state 11
    "Void"                shift, and go to state 12
    "Bool"                shift, and go to state 13
    "AddSubOp"            shift, and go to state 48
    "NotOp"               shift, and go to state 49
    "IncrDecr"            shift, and go to state 50
    "["                   shift, and go to state 52
    "("                   shift, and go to state 53

    typename        go to state 55
    standard_type   go to state 16
    expression      go to state 81
    variable        go to state 82
    constant        go to state 60
    listexpression  go to state 61


State 49

   19 expression: "NotOp" . expression

    "integer constant"    shift, and go to state 38
    "float constant"      shift, and go to state 39
    "character constant"  shift, and go to state 40
    "True"                shift, and go to state 41
    "False"               shift, and go to state 42
    "String constant"     shift, and go to state 43
    "Identifier"          shift, and go to state 44
    "Char"                shift, and go to state 9
    "Integer"             shift, and go to state 34
    "Float"               shift, and go to state 11
    "Void"                shift, and go to state 12
    "Bool"                shift, and go to state 13
    "AddSubOp"            shift, and go to state 48
    "NotOp"               shift, and go to state 49
    "IncrDecr"            shift, and go to state 50
    "["                   shift, and go to state 52
    "("                   shift, and go to state 53

    typename        go to state 55
    standard_type   go to state 16
    expression      go to state 83
    variable        go to state 82
    constant        go to state 60
    listexpression  go to state 61


State 50

   21 expression: "IncrDecr" . expression

    "integer constant"    shift, and go to state 38
    "float constant"      shift, and go to state 39
    "character constant"  shift, and go to state 40
    "True"                shift, and go to state 41
    "False"               shift, and go to state 42
    "String constant"     shift, and go to state 43
    "Identifier"          shift, and go to state 44
    "Char"                shift, and go to state 9
    "Integer"             shift, and go to state 34
    "Float"               shift, and go to state 11
    "Void"                shift, and go to state 12
    "Bool"                shift, and go to state 13
    "AddSubOp"            shift, and go to state 48
    "NotOp"               shift, and go to state 49
    "IncrDecr"            shift, and go to state 50
    "["                   shift, and go to state 52
    "("                   shift, and go to state 53

    typename        go to state 55
    standard_type   go to state 16
    expression      go to state 84
    variable        go to state 82
    constant        go to state 60
    listexpression  go to state 61


State 51

   74 comp_statement: "{" . decl_statements "}"

    "integer constant"    shift, and go to state 38
    "float constant"      shift, and go to state 39
    "character constant"  shift, and go to state 40
    "True"                shift, and go to state 41
    "False"               shift, and go to state 42
    "String constant"     shift, and go to state 43
    "Identifier"          shift, and go to state 44
    "Char"                shift, and go to state 9
    "Integer"             shift, and go to state 34
    "Float"               shift, and go to state 11
    "Void"                shift, and go to state 12
    "If"                  shift, and go to state 45
    "While"               shift, and go to state 46
    "Bool"                shift, and go to state 13
    "Return"              shift, and go to state 47
    "AddSubOp"            shift, and go to state 48
    "NotOp"               shift, and go to state 49
    "IncrDecr"            shift, and go to state 50
    "{"                   shift, and go to state 51
    "["                   shift, and go to state 52
    "("                   shift, and go to state 53
    ";"                   shift, and go to state 54

    $default  reduce using rule 57 (decl_statements)

    typename              go to state 55
    standard_type         go to state 16
    expression            go to state 56
    variable              go to state 57
    general_expression    go to state 58
    assignment            go to state 59
    constant              go to state 60
    listexpression        go to state 61
    decl_statements       go to state 85
    statements            go to state 63
    statement             go to state 64
    expression_statement  go to state 65
    if_statement          go to state 66
    while_statement       go to state 67
    return_statement      go to state 68
    comp_statement        go to state 69


State 52

   44 listexpression: "[" . expression_list "]"

    "integer constant"    shift, and go to state 38
    "float constant"      shift, and go to state 39
    "character constant"  shift, and go to state 40
    "True"                shift, and go to state 41
    "False"               shift, and go to state 42
    "String constant"     shift, and go to state 43
    "Identifier"          shift, and go to state 44
    "Char"                shift, and go to state 9
    "Integer"             shift, and go to state 34
    "Float"               shift, and go to state 11
    "Void"                shift, and go to state 12
    "Bool"                shift, and go to state 13
    "AddSubOp"            shift, and go to state 48
    "NotOp"               shift, and go to state 49
    "IncrDecr"            shift, and go to state 50
    "["                   shift, and go to state 52
    "("                   shift, and go to state 53

    $default  reduce using rule 37 (expression_list)

    typename            go to state 55
    standard_type       go to state 16
    expression          go to state 56
    variable            go to state 57
    general_expression  go to state 86
    assignment          go to state 59
    expression_list     go to state 87
    constant            go to state 60
    listexpression      go to state 61


State 53

   26 expression: "(" . general_expression ")"
   27           | "(" . standard_type ")"

    "integer constant"    shift, and go to state 38
    "float constant"      shift, and go to state 39
    "character constant"  shift, and go to state 40
    "True"                shift, and go to state 41
    "False"               shift, and go to state 42
    "String constant"     shift, and go to state 43
    "Identifier"          shift, and go to state 44
    "Char"                shift, and go to state 9
    "Integer"             shift, and go to state 34
    "Float"               shift, and go to state 11
    "Void"                shift, and go to state 12
    "Bool"                shift, and go to state 13
    "AddSubOp"            shift, and go to state 48
    "NotOp"               shift, and go to state 49
    "IncrDecr"            shift, and go to state 50
    "["                   shift, and go to state 52
    "("                   shift, and go to state 53

    typename            go to state 55
    standard_type       go to state 88
    expression          go to state 56
    variable            go to state 57
    general_expression  go to state 89
    assignment          go to state 59
    constant            go to state 60
    listexpression      go to state 61


State 54

   65 statement: ";" .

    $default  reduce using rule 65 (statement)


State 55

   30 variable: typename . "Identifier"

    "Identifier"  shift, and go to state 90


State 56

   13 expression: expression . "LogicalOr" expression
   14           | expression . "LogicalAnd" expression
   15           | expression . "EqualOp" expression
   16           | expression . "RelOp" expression
   17           | expression . "AddSubOp" expression
   18           | expression . "MultiplOp" expression
   35 assignment: expression .

    "RelOp"       shift, and go to state 91
    "EqualOp"     shift, and go to state 92
    "LogicalOr"   shift, and go to state 93
    "LogicalAnd"  shift, and go to state 94
    "AddSubOp"    shift, and go to state 95
    "MultiplOp"   shift, and go to state 96

    $default  reduce using rule 35 (assignment)


State 57

   22 expression: variable . "IncrDecr"
   23           | variable .
   24           | variable . "(" expression_list ")"
   29 variable: variable . "[" general_expression "]"
   34 assignment: variable . "=" assignment

    "="         shift, and go to state 97
    "IncrDecr"  shift, and go to state 98
    "["         shift, and go to state 99
    "("         shift, and go to state 100

    $default  reduce using rule 23 (expression)


State 58

   32 general_expression: general_expression . "," general_expression
   66 expression_statement: general_expression . ";"

    ";"  shift, and go to state 101
    ","  shift, and go to state 102


State 59

   33 general_expression: assignment .

    $default  reduce using rule 33 (general_expression)


State 60

   25 expression: constant .

    $default  reduce using rule 25 (expression)


State 61

   28 expression: listexpression .

    $default  reduce using rule 28 (expression)


State 62

   51 full_func_declaration: nopar_func_header "{" decl_statements . "}"

    "}"  shift, and go to state 103


State 63

   56 decl_statements: statements .
   58 statements: statements . statement

    "integer constant"    shift, and go to state 38
    "float constant"      shift, and go to state 39
    "character constant"  shift, and go to state 40
    "True"                shift, and go to state 41
    "False"               shift, and go to state 42
    "String constant"     shift, and go to state 43
    "Identifier"          shift, and go to state 44
    "Char"                shift, and go to state 9
    "Integer"             shift, and go to state 34
    "Float"               shift, and go to state 11
    "Void"                shift, and go to state 12
    "If"                  shift, and go to state 45
    "While"               shift, and go to state 46
    "Bool"                shift, and go to state 13
    "Return"              shift, and go to state 47
    "AddSubOp"            shift, and go to state 48
    "NotOp"               shift, and go to state 49
    "IncrDecr"            shift, and go to state 50
    "{"                   shift, and go to state 51
    "["                   shift, and go to state 52
    "("                   shift, and go to state 53
    ";"                   shift, and go to state 54

    $default  reduce using rule 56 (decl_statements)

    typename              go to state 55
    standard_type         go to state 16
    expression            go to state 56
    variable              go to state 57
    general_expression    go to state 58
    assignment            go to state 59
    constant              go to state 60
    listexpression        go to state 61
    statement             go to state 104
    expression_statement  go to state 65
    if_statement          go to state 66
    while_statement       go to state 67
    return_statement      go to state 68
    comp_statement        go to state 69


State 64

   59 statements: statement .
